--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "react-indiana-drag-scroll": "^2.2.1",
     "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.17",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "web-vitals": "^2.1.4",
     "zustand": "^5.0.4"
   },
