--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,10 @@ name: Deploy React App to EC2 via Docker Compose
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+      - feature/build
+  workflow_dispatch:
 
 jobs:
   deploy:
