--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,19 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm install
+        working-directory: frontend/frontend_build/OVERLAB_FE-feature-build/front-end
+
+      - name: Build React app
+        run: npm run build
+        working-directory: frontend/frontend_build/OVERLAB_FE-feature-build/front-end
+
       - name: Upload files to EC2
         uses: appleboy/scp-action@v0.1.7
         with:
