--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: "20"
 
       - name: Install dependencies
         run: npm install
@@ -33,8 +33,8 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: "."
-          target: "~/ground-hub/frontend/frontend_build/OVERLAB_FE-feature-build/front-end"  # 배포 위치 (원하는 경로로 변경 가능)
+          source: "frontend/frontend_build/OVERLAB_FE-feature-build/front-end/dist"
+          target: "~/ground-hub/frontend/frontend_build/OVERLAB_FE-feature-build/front-end/dist" # 배포 위치 (원하는 경로로 변경 가능)
 
       - name: SSH to EC2 and deploy
         uses: appleboy/ssh-action@v1.0.3
