--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,15 +17,15 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: '20'
 
       - name: Install dependencies
         run: npm install
-        working-directory: frontend/frontend_build/OVERLAB_FE-feature-build/front-end
+        working-directory: front-end/
 
       - name: Build React app
         run: npm run build
-        working-directory: frontend/frontend_build/OVERLAB_FE-feature-build/front-end
+        working-directory: front-end/
 
       - name: Upload files to EC2
         uses: appleboy/scp-action@v0.1.7
@@ -33,8 +33,8 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: "frontend/frontend_build/OVERLAB_FE-feature-build/front-end/dist"
-          target: "~/ground-hub/frontend/frontend_build/OVERLAB_FE-feature-build/front-end/dist" # 배포 위치 (원하는 경로로 변경 가능)
+          source: "front-end/dist"
+          target: "~/ground-hub/frontend/frontend_build/OVERLAB_FE-feature-build/front-end/dist"  # 배포 위치 (원하는 경로로 변경 가능)
 
       - name: SSH to EC2 and deploy
         uses: appleboy/ssh-action@v1.0.3
