Update github Actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,16 @@ jobs:
         run: npm run build
         working-directory: front-end/
 
+      # EC2에서 기존 dist 삭제
+      - name: Clean dist on EC2
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            rm -rf ~/ground-hub/frontend/frontend_build/OVERLAB_FE-feature-build/front-end/dist
+
       - name: Upload files to EC2
         uses: appleboy/scp-action@v0.1.7
         with:
