--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Build React app
         run: npm run build
         working-directory: front-end/
+        env:
+          VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
+
 
       # EC2에서 기존 dist 삭제
       - name: Clean dist on EC2
